# rs-short

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
static/: index.html
