[package]
name = "rs-short"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
rand = "0.8"
bytes = "1.0"
lazy_static = "1.4"
tokio = { version = "1", features = ["full", "macros"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
syn = { version = "1.0.109", features = ["parsing", "derive", "full"] }
sqlx-macros = "0.7.2"
serde = { version = "1.0.189", features = ["derive"] }
dotenv = "0.15.0"
